# filescan

./: .gitignore  README.md  README_zh.md  main.sh  package.ps1  package.sh  pyproject.toml  pytest.ini  requirements.txt  setup.bak.cfg
.github/workflows/: publish.yaml
examples/: .fscanignore  check_resource.py  data.csv  data.json  load_self.py  merge_self.py  merged_to_mermaid.py  output_ast_edges.csv  output_ast_nodes.csv  scan_data.py  scan_self.py  search_self.py  self.fscanignore  uml_self.py  watch_self.py
examples/data/: metadata.txt
examples/data/checkpoints/: unused.json
examples/data/snapshots/: config_test.txt  run_log_002.docx
src/: filescan.csv  filescan_ast.csv
src/filescan/: __init__.py  ast_scanner.py  base.py  default.fscanignore  file_watcher.py  graph_builder.py  graph_loader.py  requirements.txt  scan_file_tree.py  scanner.py  search_engine.py  utils.py
src/filescan/commands/: cli.py
tests/: test_ast_scanner.py  test_cli.py  test_graph_builder.py  test_import.py  test_scanner.py  test_search_engine.py
