[build-system]
requires = ["setuptools>=80", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "filescan"
version = "0.0.2"
description = "Recursively scans a directory and outputs a flat, LLM-friendly file tree"
readme = "README.md"
requires-python = ">=3.10"

license = "MIT"
license-files = ["LICENSE"]

authors = [
  { name = "DreamSoul", email = "contact@dreamsoul.com" }
]

classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent"
]

dependencies = [
  "pathspec>=0.10.3"
]

[project.urls]
Homepage = "https://github.com/DreamSoul-AI/filescan"

[project.scripts]
filescan = "filescan.commands.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
filescan = ["README.md", "README_zh.md", "LICENSE", "default.fscanignore"]
